--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container mx-auto max-w-5xl">
         <div class="bg-white rounded-2xl shadow-lg p-6 md:p-10">
             <header class="text-center mb-8">
-                <h1 class="text-3xl md:text-4xl font-bold text-gray-800">Interactive Art Docent</h1>
+                <h1 class="text-3xl md:text-4xl font-bold text-gray-800">ArtSign</h1>
                 <p class="text-gray-500 mt-2">Let AI help you discover the story behind the art.</p>
             </header>
 
