--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ArtSign</title>
+    <title>SignArt</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -19,7 +19,7 @@
     <div class="container mx-auto max-w-5xl">
         <div class="bg-white rounded-2xl shadow-lg p-6 md:p-10">
             <header class="text-center mb-8">
-                <h1 class="text-3xl md:text-4xl font-bold text-gray-800">ArtSign</h1>
+                <h1 class="text-3xl md:text-4xl font-bold text-gray-800">SignArt</h1>
                 <p class="text-gray-500 mt-2">Let AI help you discover the story behind the art.</p>
             </header>
 
